--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/OWASP/gdpr-patterns#readme",
   "dependencies": {
+    "express": "^4.16.3",
     "fluentnode": "^0.7.1",
     "jira-client": "^6.4.1",
     "mocha": "^5.0.5",
+    "nodemon": "^1.17.3",
     "request": "^2.85.0"
   }
 }
