--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   },
   "homepage": "https://github.com/OWASP/gdpr-patterns#readme",
   "dependencies": {
+    "async": "^2.6.0",
+    "coffeescript": "^2.2.4",
     "express": "^4.16.3",
     "fluentnode": "^0.7.1",
     "jira-client": "^6.4.1",
     "mocha": "^5.0.5",
     "neo4j": "^2.0.0-RC2",
+    "neo4j-driver": "^1.5.3",
     "nodemon": "^1.17.3",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "supertest": "^3.0.0"
   }
 }
