--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/OWASP/gdpr-patterns#readme",
   "dependencies": {
     "async": "^2.6.0",
+    "cheerio": "^1.0.0-rc.2",
     "coffeescript": "^2.2.4",
     "express": "^4.16.3",
     "fluentnode": "^0.7.1",
