--- a/bin/docker/Dockerfile
+++ b/bin/docker/Dockerfile
@@ -6,15 +6,16 @@ RUN     sed -ie 's/git@github.com:/https:\/\/github.com\//' .gitmodules
 RUN     git submodule init                      && \
         git submodule update                    && \
         npm install
-RUN     git pull origin
 
-ENV HUGO_VERSION 0.36.1
-ENV HUGO_BINARY hugo_${HUGO_VERSION}_Linux-64bit.deb
+RUN    apt-get update && apt-get install vim -y
+ENV     HUGO_VERSION 0.36.1
+ENV     HUGO_BINARY hugo_${HUGO_VERSION}_Linux-64bit.deb
 
 ADD     https://github.com/spf13/hugo/releases/download/v${HUGO_VERSION}/${HUGO_BINARY} /tmp/hugo.deb
 RUN     dpkg -i /tmp/hugo.deb                   && \
 	    rm /tmp/hugo.deb
-RUN    apt-get update && apt-get install vim -y
+
+RUN     git pull origin ;
 
 CMD bin/start-servers.sh
 
