--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -3,6 +3,8 @@ title           = "GDPR Patterns"
 languageCode    = "en-uk"
 paginate        = "10"
 theme           = "coreui-hugo"
+testPing           = "testPong"
+
 
 [Params]
     ghrepo      = ""
