--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "async": "^2.6.0",
     "cheerio": "^1.0.0-rc.2",
-    "coffeescript": "^2.2.4",
     "express": "^4.16.3",
     "fluentnode": "^0.7.1",
     "jira-client": "^6.4.1",
@@ -32,5 +31,10 @@
     "nodemon": "^1.17.3",
     "request": "^2.85.0",
     "supertest": "^3.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.6.1",
+    "coffeescript": "^2.3.0"
   }
 }
