--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - cat .gitmodules
   - sed -ie 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - cat .gitmodules
-  - git submodules init
-  - git submodules update
+  - git submodule init
+  - git submodule update
 install:
   - ls
