--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "express": "^4.16.3",
     "fluentnode": "^0.7.1",
     "jira-client": "^6.4.1",
-    "mocha": "^5.0.5",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.3",
     "nodemon": "^1.17.3",
@@ -35,6 +34,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
-    "coffeescript": "^2.3.0"
+    "coffeescript": "^2.3.0",
+    "mocha": "^5.1.1"
   }
 }
