update dockerfile for nested submodules, and creating a unique docker file for all

--- a/bin/docker_all/Dockerfile
+++ b/bin/docker_all/Dockerfile
@@ -1,4 +1,12 @@
-FROM    node-hugo
+FROM    node:9.10.1
+
+RUN     apt-get update && apt-get install apt-utils vim -y
+ENV     HUGO_VERSION 0.36.1
+ENV     HUGO_BINARY hugo_${HUGO_VERSION}_Linux-64bit.deb
+
+ADD     https://github.com/spf13/hugo/releases/download/v${HUGO_VERSION}/${HUGO_BINARY} /tmp/hugo.deb
+RUN     dpkg -i /tmp/hugo.deb                   && \
+	    rm /tmp/hugo.deb
 
 RUN     git clone https://github.com/pbx-gs/gdpr-patterns.git
 WORKDIR gdpr-patterns
@@ -8,3 +16,8 @@ RUN     git submodule init                      && \
         sed -ie 's/git@github.com:/https:\/\/github.com\//' gdpr-patterns-presentation/.gitmodules && \
         git submodule update --init --recursive && \
         npm install
+
+EXPOSE 3000
+EXPOSE 1313
+
+CMD bin/start-servers.sh
