--- a/config.json
+++ b/config.json
@@ -1,12 +1,21 @@
 {
+    "baseURL": "/",
+    "title": "GDPR Patterns",
+    "languageCode": "en-uk",
+    "paginate": "10",
+    "theme": "coreui-hugo",
+    "Params": {
+      "ghrepo": ""
+    },
     "neo4j": {
-        "url": "localhost",
+        "url_bold": "bolt://localhost:7687",
+        "url": "localhost:7474",
         "username": "neo4j",
         "password": "test"
     },
 
     "jira": {
-        "url": "localhost",
+        "url": "https://jira.photobox.com",
         "username": "neo4j",
         "password": "test"
     }
