--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "neo4j-driver": "^1.5.3",
     "nodemon": "^1.17.3",
     "request": "^2.85.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "fs-extra": "6.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
