move to timestamp

--- a/bin/docker/gdpr-patterns-data/Dockerfile
+++ b/bin/docker/gdpr-patterns-data/Dockerfile
@@ -7,10 +7,8 @@ RUN     npm install
 
 CMD bin/start-servers-data.sh
 
-# docker build -t gdpr-patterns-data:latest bin/docker/gdpr-patterns-data --no-cache;
-# docker tag gdpr-patterns-data pbxgs/gdpr-patterns-data;
-# docker push pbxgs/gdpr-patterns-data;
+# docker build -t gdpr-patterns-data:latest bin/docker/gdpr-patterns-data --no-cache && docker tag gdpr-patterns-data pbxgs/gdpr-patterns-data && docker push pbxgs/gdpr-patterns-data;
 
 # docker stop gdpr-patterns-data; docker rm gdpr-patterns-data --force;
-# docker run -d --name gdpr-patterns-data -p 1313:1314 -p 3000:3001 --env Neo4J_Url=bolt://localhost:7687 --env Neo4J_Username=neo4j --env Neo4J_Password=test pbxgs/gdpr-patterns-data
+# docker run -d --name gdpr-patterns-data  --env --env GIT_HTTP_Url='http://gdpr-patterns:@0.0.0.0:10080/gs/jira-data.git pbxgs/gdpr-patterns-data
 # docker pull pbxgs/gdpr-patterns-data
