--- a/bin/docker/gdpr-patterns-data/Dockerfile
+++ b/bin/docker/gdpr-patterns-data/Dockerfile
@@ -4,7 +4,7 @@ RUN     apt-get update && apt-get install apt-utils vim -y
 RUN     git clone https://github.com/pbx-gs/gdpr-patterns.git
 WORKDIR gdpr-patterns
 RUN     npm install
-
+RUN     git pull origin
 CMD bin/start-servers-data.sh
 
 # docker build -t gdpr-patterns-data:latest bin/docker/gdpr-patterns-data --no-cache && docker tag gdpr-patterns-data pbxgs/gdpr-patterns-data && docker push pbxgs/gdpr-patterns-data;
