--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "paginate": "10",
     "theme": "coreui-hugo",
     "jql": "(project = GDPR or project = VULN or project = SEC or project = RISK or project = TM) ",
-    "jira_data_git": "ssh://git@10.8.0.17:10022/gs/jira-data.git",
+    "jira_data_git": "https://user:pass@bitbucket.org/pbx-gs/public-gdpr-patterns-data.git",
     "Params": {
       "ghrepo": ""
     },
@@ -17,8 +17,8 @@
     },
 
     "jira": {
-        "url": "https://jira.photobox.com",
-        "username": "neo4j",
-        "password": "test"
+        "url": "gdpr-patterns.atlassian.net",
+        "username": "user",
+        "password": "pass"
     }
 }
