--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "fluentnode": "^0.7.1",
+    "fs-extra": "6.0.1",
+    "http": "0.0.0",
     "jira-client": "^6.4.1",
     "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^1.5.3",
     "nodemon": "^1.17.3",
     "request": "^2.85.0",
-    "supertest": "^3.0.0",
-    "fs-extra": "6.0.1"
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
