--- a/bin/docker_all/Dockerfile
+++ b/bin/docker_all/Dockerfile
@@ -1,6 +1,6 @@
 FROM    node:9.10.1
 
-RUN     apt-get update && apt-get install apt-utils vim -y
+RUN     apt-get update && apt-get install apt-utils git vim -y
 ENV     HUGO_VERSION 0.36.1
 ENV     HUGO_BINARY hugo_${HUGO_VERSION}_Linux-64bit.deb
 
